<resources>
    <string name="app_name">友声</string>

    <!-- App Message -->
    <string name="some_error">Some Error Occurred!</string>

    <!-- Copyright info -->
    <string name="copyright_text">Power by linzh Copyright © 2017-2018. FriendVoice</string>

    <!-- Navigation -->
    <string name="navigation_manual">使用说明</string>
    <string name="navigation_write_board">手写板</string>
    <string name="navigation_color_style">个性装扮</string>
    <string name="navigation_debug_mode">调试模式</string>
    <string name="navigation_setting">设置</string>
    <string name="navigation_exit">退出</string>
    <string name="nav_header_text">友声智能手语</string>

    <!-- Title -->
    <string name="main_title">友声</string>

    <!-- Menu Items -->
    <string name="menu_open_bluetooth">打开蓝牙</string>
    <string name="menu_search">搜索</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_stop">停止</string>

    <!-- Manual -->
    <string name="manual_toolbar_title">使用说明</string>
    <string name="manual_text_title">友声智能手语 for Android 1.0.0 使用说明</string>

    <!-- Writer -->
    <string name="write_board_toolbar_title">写字板</string>
    <string name="writing_board_delete_title">清除</string>

    <!-- Developer -->
    <string name="login">登录</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_dummy">开发者</string>

    <!-- Error -->
    <string name="find_application_version_info_error">获取版本信息失败</string>

    <string name="default_speaker">xiaoyan</string>
    <string name="word_delete">删除</string>
    <string name="menu_connect">连接</string>
    <string name="menu_disconnect">断开连接</string>
    <string name="word_edit">编辑</string>
    <string name="word_cancel">取消</string>

    <!-- About -->
    <string name="about_toolbar_title">关于友声</string>

    <!--Login Validation-->
    <string name="empty_email">请输入一个非空email</string>
    <string name="invalid_email">请输入有效的email</string>
    <string name="empty_password">请输入有效密码</string>

    <!-- Text Tab -->
    <string name="edit_text_hint">输入你想播报的语音</string>
    <string name="msg_send_button">播报</string>
    <string name="login_remember_passwd_tip">记住密码？</string>
    <string name="input_tip">输入编码和对应中文</string>
    <string name="input_code_hint">编码</string>
    <string name="input_code_tip">词语</string>

    <!-- Dialog -->
    <string name="code_add">添加</string>
    <string name="cancel">取消</string>

    <!-- BLE -->
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="notAvailable">Language is not available.</string>
    <string name="connected">已连接</string>
    <string name="disconnected">未连接</string>
    <string name="ble_not_supported">BLE is not supported</string>

    <!-- Setting -->
    <string name="user_help">user_help</string>
    <string name="about_app">about_app</string>
    <string name="speaker">speaker</string>
    <string name="clean_cache">clean_cache</string>
    <string name="developer_debug">developer_debug</string>
    <string name="feedback">feedback</string>

    <string name="temp">null</string>

    <string-array name="speaker">
        <item>小燕 青年女声 中英文（普通话）</item>
        <item>小宇 青年男声 中英文（普通话）</item>
        <item>小研 青年女声 中英文（普通话）</item>
        <item>小琪 青年女声 中英文（普通话）</item>
        <item>小峰 青年男声 中英文（普通话）</item>
        <item>小梅 青年女声 中英文（粤语）</item>
        <item>小莉 青年女声 中英文（台湾普通话）</item>
        <item>小新 童年男声 汉语（普通话）</item>
        <item>楠楠 童年女声 汉语（普通话）</item>
        <item>老孙 老年男声 汉语（普通话）</item>
    </string-array>
    <string-array name="speaker_list">
        <item>xiaoyan</item>
        <item>xiaoyun</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voice_to_text">语音</string>
</resources>
