<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_manual"
            android:title="@string/navigation_manual"
            android:icon="@drawable/ic_book_white_24dp"/>

        <item
            android:id="@+id/nav_write_board"
            android:title="@string/navigation_write_board"
            android:icon="@drawable/ic_gesture_white_24dp"/>

        <item
            android:id="@+id/nav_color_style"
            android:title="@string/navigation_color_style"
            android:icon="@drawable/ic_color_lens_white_24dp"/>

        <item
            android:id="@+id/nav_debug_mode"
            android:title="@string/navigation_debug_mode"
            android:icon="@drawable/ic_build_white_24dp"/>

        <item
            android:id="@+id/nav_setting"
            android:checkable="false"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/navigation_setting"/>

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_power_settings_new_white_24dp"
            android:title="@string/navigation_exit" />

    </group>
</menu>